--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </div>
     
   </footer>   
-  <a href="https://wa.me/593963816988?text=Hola%20me%20gustaría%20saber%20más%20sobre%20sus%20productos" class="whatsapp-button" target="_blank">
+  <a href="https://wa.me/593963816988?text=Hola%20me%20gustaría%20saber%20más%20sobre%20sus%20productos%20https://gayamgayam.github.io/Tienda-Virtual-master/index.html" class="whatsapp-button" target="_blank">
     <img src="assets/img/wsp.png" alt="WhatsApp" style="width:50px;height:50px;">
 </a>
 
