--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="ywXlVSGWaLxe8X2jRgGJcD0nCRh21JgbYOqUNQ8sGzY" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="ywXlVSGWaLxe8X2jRgGJcD0nCRh21JgbYOqUNQ8sGzY" >
     <title>GAYAM</title>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
   </head>
