--- a/productos.html
+++ b/productos.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="ywXlVSGWaLxe8X2jRgGJcD0nCRh21JgbYOqUNQ8sGzY" />
     <title>Productos</title>
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
   </head>
